--- a/FootballChairman/Pages/MatchOverviewPage.xaml
+++ b/FootballChairman/Pages/MatchOverviewPage.xaml
@@ -17,11 +17,18 @@
             <Button Content="End Season"
                     Command="{Binding EndSeasonCommand}"
                     Visibility="{Binding ShowEndSeasonButton}"/>
-            <ComboBox
+            <StackPanel Orientation="Horizontal">
+                <ComboBox
+                Width="150"
+                ItemsSource="{Binding Countries}"
+                DisplayMemberPath="Name"
+                SelectedItem="{Binding SelectedCountry}"/>
+                <ComboBox
                 Width="150"
                 ItemsSource="{Binding Competitions}"
                 DisplayMemberPath="Name"
                 SelectedItem="{Binding SelectedCompetition}"/>
+            </StackPanel>
             <ListView ItemsSource="{Binding ShowLastGames}">
                 <ListView.View>
                     <GridView>
