--- a/FootballChairman/Pages/NavigationButtonsPage.xaml
+++ b/FootballChairman/Pages/NavigationButtonsPage.xaml
@@ -46,6 +46,10 @@
                 Content="Managers"
                 Width="100"
                 Command="{Binding OpenManagerPageCommand}"/>
+                <Button 
+                Content="Transfers"
+                Width="100"
+                Command="{Binding OpenTransferPageCommand}"/>
             </StackPanel>
         </StackPanel>
     </Grid>
