--- a/FootballChairman/Pages/ClubPage.xaml
+++ b/FootballChairman/Pages/ClubPage.xaml
@@ -33,6 +33,12 @@
             </StackPanel>
             <StackPanel Orientation="Horizontal">
                 <Label 
+                Content="Goalkeeping: "/>
+                <Label 
+                Content="{Binding SelectedClub.SkillGoalkeeping}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label 
                 Content="Defence: "/>
                 <Label 
                 Content="{Binding SelectedClub.SkillDefense}"/>
@@ -68,6 +74,12 @@
             <Label Content="Stats"/>
             <StackPanel Orientation="Horizontal">
                 <Label 
+                Content="Goalkeeping: "/>
+                <Label 
+                Content="{Binding SelectedManager.TrainingGoalkeepingSkill}"/>
+            </StackPanel>
+            <StackPanel Orientation="Horizontal">
+                <Label 
                 Content="Defence: "/>
                 <Label 
                 Content="{Binding SelectedManager.TrainingDefenseSkill}"/>
@@ -96,6 +108,9 @@
                     </GridViewColumn>
                     <GridViewColumn Width="150" DisplayMemberBinding="{Binding Age}">
                         <GridViewColumnHeader Content="Age"/>
+                    </GridViewColumn>
+                    <GridViewColumn Width="150" DisplayMemberBinding="{Binding Goalkeeping}">
+                        <GridViewColumnHeader Content="Goalkeeping"/>
                     </GridViewColumn>
                     <GridViewColumn Width="150" DisplayMemberBinding="{Binding Defense}">
                         <GridViewColumnHeader Content="Defense"/>
