--- a/FootballChairman/Pages/ClubPage.xaml
+++ b/FootballChairman/Pages/ClubPage.xaml
@@ -13,6 +13,7 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="200"/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="50"/>
@@ -89,6 +90,15 @@
                     Content="{Binding Attackers}"/>
             </StackPanel>
         </StackPanel>
+        <ListView Grid.Row="1" Grid.Column="2" ItemsSource="{Binding Transfers}">
+            <ListView.View>
+                <GridView>
+                    <GridViewColumn Width="150" DisplayMemberBinding="{Binding GetTranferInString}">
+                        <GridViewColumnHeader Content="Transfer"/>
+                    </GridViewColumn>
+                </GridView>
+            </ListView.View>
+        </ListView>
         <StackPanel Grid.Row="2">
             <StackPanel Orientation="Horizontal">
                 <Label 
@@ -136,7 +146,7 @@
                 Content="{Binding SelectedManager.TrainingAttackSkill}"/>
             </StackPanel>
         </StackPanel>
-        <ListView Grid.Row="2" Grid.Column="1" ItemsSource="{Binding Players}">
+        <ListView Grid.Row="2" Grid.Column="1" Grid.ColumnSpan="2" ItemsSource="{Binding Players}">
             <ListView.View>
                 <GridView>
                     <GridViewColumn Width="150" DisplayMemberBinding="{Binding LastName}">
